Twenty Fourteen: fix gap above static pages, props SergeyBiryukov. Fixes #26694. Built from https://develop.svn.wordpress.org/trunk@27117
git-svn-id: http://core.svn.wordpress.org/trunk@26984 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -3218,7 +3218,8 @@ a.post-thumbnail:hover {
 	}
 
 	.full-width .site-content .has-post-thumbnail .entry-header,
-	.full-width.singular .site-content .hentry.has-post-thumbnail {
+	.full-width.singular .site-content .hentry.has-post-thumbnail,
+	.full-width.home .site-content .hentry.has-post-thumbnail {
 		margin-top: -48px;
 	}
 
@@ -3544,7 +3545,8 @@ a.post-thumbnail:hover {
 		margin-left: 20px;
 	}
 
-	.full-width.singular .site-content .hentry.has-post-thumbnail {
+	.full-width.singular .site-content .hentry.has-post-thumbnail,
+	.full-width.home .site-content .hentry.has-post-thumbnail {
 		margin-top: -72px;
 	}
 
